k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-hello
  namespace: vmexamples-user16
  labels:
    app: php-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-hello
  template:
    metadata:
      labels:
        app: php-hello
    spec:
      containers:
        - name: php-hello
          # Replace with your built image location. test
          image: quay.io/rabraham/rhel-php:v1.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
