k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-hello
  labels:
    app: php-hello
spec:
  selector:
    app: php-hello
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
