k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: php-hello
  labels:
    app: php-hello
spec:
  to:
    kind: Service
    name: php-hello
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
